fixed overflow issue on github widget

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ pre.code{
     display: block;
     font-family: monospace;
     padding:0;
-    margin:0;
+    margin:0 0 10px 0;
     font-size: 13px;
     line-height: 1.42857143;
     color: #333;
@@ -75,7 +75,7 @@ strong{
 }
 
 .main-content{
-    
+    font-size:16px;
 }
 
 .main-content h2{
@@ -428,6 +428,25 @@ strong{
 
 .hide-extra{
     white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.hide-extra-container{
+    position:relative;
+    text-overflow: ellipsis;
+    height:20px;
+}
+
+.hide-extra-inner{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+}
+
+.hide-extra-content{
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 /**********************************
